--- a/Flutterasia/MoreMenuStoryboard.storyboard
+++ b/Flutterasia/MoreMenuStoryboard.storyboard
@@ -12,7 +12,7 @@
         <!--More Menu Table View Controller-->
         <scene sceneID="Uqc-L0-fb6">
             <objects>
-                <tableViewController id="8AQ-pD-05w" customClass="MoreMenuTableViewController" customModule="Flutterasia" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController hidesBottomBarWhenPushed="YES" id="8AQ-pD-05w" customClass="MoreMenuTableViewController" customModule="Flutterasia" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="rEb-nv-pIc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
